@@ -62,66 +62,27 @@ MainWindow::MainWindow(QWidget *parent)
 
 MainWindow::~MainWindow()
 {
-    // Saving docks position
+    // Saving layout position
     KConfig c;
     KConfigGroup configDock = c.group("DocksPosition");
+    configDock.writeEntry("MainWindowLayout", saveState(0));
+    c.sync();
 
     if (m_workflow) {
-        configDock.writeEntry("FloatingStartPage", m_workflow->isFloating());
-        configDock.writeEntry("StartPagePosition", convertDockState(m_workflow));
         delete m_startPage;
         delete m_workflow;
     }
 
     if (m_previewer) {
-        configDock.writeEntry("FloatingPreviewer", m_previewerWidget->isFloating());
-        configDock.writeEntry("PreviewerPosition", convertDockState(m_previewerWidget));
+        configDock.writeEntry("PreviewerHeight", m_previewerWidget->height());
+        configDock.writeEntry("PreviewerWidth", m_previewerWidget->width());
+        c.sync();
         delete m_previewer;
         delete m_previewerWidget;
     }
     if (m_dockTimeLine) {
-        configDock.writeEntry("FloatingTimeLine", m_dockTimeLine->isFloating());
-        configDock.writeEntry("TimeLinePosition", convertDockState(m_dockTimeLine));
         delete m_timeLine;
         delete m_dockTimeLine;
-    }
-
-    c.sync();
-}
-
-int MainWindow::convertDockState(QDockWidget *widget)
-{
-    switch (dockWidgetArea(widget)) {
-    case Qt::LeftDockWidgetArea:
-        return 1;
-    case Qt::RightDockWidgetArea:
-        return 2;
-    case Qt::TopDockWidgetArea:
-        return 4;
-    case Qt::BottomDockWidgetArea:
-        return 8;
-    case Qt::AllDockWidgetAreas:
-        return 16;
-    case Qt::NoDockWidgetArea:
-        return 0;
-    }
-}
-
-Qt::DockWidgetArea MainWindow::convertDockState(int id)
-{
-    switch (id) {
-    case 1:
-        return Qt::LeftDockWidgetArea;
-    case 2:
-        return Qt::RightDockWidgetArea;
-    case 4:
-        return Qt::TopDockWidgetArea;
-    case 8:
-        return Qt::BottomDockWidgetArea;
-    case 16:
-        return Qt::AllDockWidgetAreas;
-    case 0:
-        return Qt::NoDockWidgetArea;
     }
 }
 
@@ -150,12 +111,10 @@ void MainWindow::createDockWidgets()
             this, SLOT(changeTab(int)));
 
     m_workflow->setWidget(m_sidebar);
-    addDockWidget(convertDockState(configDock.readEntry("StartPagePosition", 1)) , m_workflow);
+    addDockWidget(Qt::LeftDockWidgetArea, m_workflow);
 
     m_workflow->setSizePolicy(QSizePolicy::Minimum, QSizePolicy::Expanding);
     m_sidebar->setSizePolicy(QSizePolicy::Maximum, QSizePolicy::Expanding);
-
-    m_workflow->setFloating(configDock.readEntry("FloatingStartPage", false));
 
     /////////////////////////////////////////////////////////////////////////
     m_dockTimeLine = new QDockWidget(i18n("TimeLine"), this);
@@ -167,21 +126,23 @@ void MainWindow::createDockWidgets()
 
     m_dockTimeLine->setWidget(m_timeLine);
 
-    addDockWidget(convertDockState(configDock.readEntry("TimeLinePosition", 1)) , m_dockTimeLine);
+    addDockWidget(Qt::RightDockWidgetArea, m_dockTimeLine);
 
     m_dockTimeLine->setSizePolicy(QSizePolicy::Minimum, QSizePolicy::Expanding);
     m_timeLine->setSizePolicy(QSizePolicy::Maximum, QSizePolicy::Expanding);
-
-    m_workflow->setFloating(configDock.readEntry("FloatingTimeLine", false));
 
     /////////////////////////////////////////////////////////////////////////
     m_previewerWidget = new QDockWidget(i18n("Previewer"), this);
     m_previewerWidget->setObjectName("workflow");
     m_previewer = new Previewer();
     m_previewerWidget->setWidget(m_previewer);
-    addDockWidget(convertDockState(configDock.readEntry("PreviewerPosition", 1)) , m_previewerWidget);
+    addDockWidget(Qt::BottomDockWidgetArea, m_previewerWidget);
 
-    m_workflow->setFloating(configDock.readEntry("FloatingPreviewer", false));
+    m_previewerWidget->updateGeometry();
+    m_previewer->updateGeometry();
+
+    // Restoring the previous layout
+    restoreState(configDock.readEntry("MainWindowLayout",QByteArray()), 0);
 }
 
 void MainWindow::quit()
