@@ -2,14 +2,14 @@
   * Simple class that pops-up a dialog to create/rename a  branch
   */
 
-#include    <klocale.h>
-#include    <QDialog>
-#include    <QDialogButtonBox>
-#include    <QPushButton>
-#include    <QVBoxLayout>
-#include    <QHBoxLayout>
-#include    <QLineEdit>
-#include    <QLabel>
+#include <klocale.h>
+#include <QDialog>
+#include <QDialogButtonBox>
+#include <QPushButton>
+#include <QVBoxLayout>
+#include <QHBoxLayout>
+#include <QLineEdit>
+#include <QLabel>
 
 #include "branchdialog.h"
 
