@@ -1,9 +1,9 @@
 #ifndef BRANCHDIALOG_H
 #define BRANCHDIALOG_H
 
-class   QDialog;
-class   QLabel;
-class   QLineEdit;
+class QDialog;
+class QLabel;
+class QLineEdit;
 
 class BranchDialog : public QDialog
 {
@@ -11,10 +11,10 @@ public:
     BranchDialog();
     QString &text();
 
-    QLineEdit   *m_branchEdit;
+    QLineEdit *m_branchEdit;
 
 private:
-    QLabel      *m_branchLabel;
+    QLabel *m_branchLabel;
 };
 
 #endif // BRANCHDIALOG_H
