@@ -2,13 +2,13 @@
   * Simple class that pops-up a dialog to add a comment to the commit
   */
 
-#include    <klocale.h>
-#include    <QDialog>
-#include    <QDialogButtonBox>
-#include    <QPushButton>
-#include    <QLineEdit>
-#include    <QLabel>
-#include    <QPlainTextEdit>
+#include <klocale.h>
+#include <QDialog>
+#include <QDialogButtonBox>
+#include <QPushButton>
+#include <QLineEdit>
+#include <QLabel>
+#include <QPlainTextEdit>
 
 #include "commitdialog.h"
 
