@@ -1,0 +1,7 @@
+install(FILES 
+  mainDataEngine.py
+  mainDataEngine.rb
+  mainPlasmoid.js
+  mainPlasmoid.py
+  mainPlasmoid.rb
+  DESTINATION ${DATA_INSTALL_DIR}/plasmate/templates) 
